Added sqlite support

--- a/samples/dict.html
+++ b/samples/dict.html
@@ -14,19 +14,7 @@
     <mbp:pagebreak />
     <a name="words"></a>
     
-    
-			<p>
-				<idx:entry>
-					<idx:orth>go</idx:orth> &mdash; წასვლა
-				</idx:entry>
-			</p>
-		
-			<p>
-				<idx:entry>
-					<idx:orth>one</idx:orth> &mdash; ერთი
-				</idx:entry>
-			</p>
-		
+    [WORDS]
 
 </body>
 
