--- a/admin/index.html
+++ b/admin/index.html
@@ -8,6 +8,18 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
 </header>
 <body>
+    <section class="hero">
+        <div class="hero-body" style="padding-bottom: 0">
+            <div class="container">
+            <h1 class="title">
+                Admin Panel
+            </h1>
+            <h2 class="subtitle">
+                English to Georgian Dictionary for Kindle e-Readers
+            </h2>
+            </div>
+        </div>
+    </section>
     <section class="section" id="app">
         <div class="container">
             <div class="card">
