--- a/admin/index.html
+++ b/admin/index.html
@@ -44,13 +44,11 @@
                             <option value="desc">Descending</option>
                         </select>
                     </p>
-                    <div class="columns">
-                        <div class="column">
-                            <button class="button is-primary is-small" @click="add()">
-                                <i class="fa fa-plus" aria-hidden="true"></i>
-                            </button>
-                        </div>
-                    </div>
+                    <a href="#" class="card-header-icon" aria-label="more options" @click="add()">
+                        <span class="icon">
+                            <i class="fa fa-plus" aria-hidden="true"></i>
+                        </span>
+                    </a>
                 </header>
                 <div class="content">
                     <table class="table">
@@ -81,7 +79,13 @@
                         </tbody>
                     </table>
                 </div>
+                <footer class="card-footer">
+                    <a href="#" class="card-footer-item">
+                        <span>Total Words count: {{ count }}</span>
+                    </a>
+                </footer>
             </div>
+            <br>
             <div class="field has-addons">
                 <p class="control">
                     <button :disabled="page<1" class="button" @click="goTo(page)">
