--- a/admin/index.html
+++ b/admin/index.html
@@ -6,112 +6,177 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+
+    <style>
+        .control.is-active .button{
+            background-color: #23d160!important;
+            border-color: #23d160!important;
+            color: #ffffff!important;
+        }
+    </style>
 </header>
-<body>
-    <section class="hero">
-        <div class="hero-body" style="padding-bottom: 0">
-            <div class="container">
-            <h1 class="title">
-                Admin Panel
-            </h1>
-            <h2 class="subtitle">
-                English to Georgian Dictionary for Kindle e-Readers
-            </h2>
-            </div>
-        </div>
-    </section>
-    <section class="section" id="app">
-        <div class="container">
-            <div class="card">
-                <header class="card-header">
-                    <p class="card-header-title">
-                        Show: &nbsp;
-                        <select v-model="limit" @change="init()">
-                            <option value="10">10</option>
-                            <option value="25">25</option>
-                            <option value="50">50</option>
-                            <option value="100">100</option>
-                        </select>
-                        &nbsp; Sort By: &nbsp;
-                        <select v-model="sort" @change="init()">
-                            <option value="id">ID</option>
-                            <option value="word">Word</option>
-                            <option value="translation">Translation</option>
-                        </select>
-                        &nbsp; Order By: &nbsp;
-                        <select v-model="order" @change="init()">
-                            <option value="asc">Asc</option>
-                            <option value="desc">Descending</option>
-                        </select>
-                    </p>
-                    <a href="#" class="card-header-icon" aria-label="more options" @click="add()">
-                        <span class="icon">
-                            <i class="fa fa-plus" aria-hidden="true"></i>
-                        </span>
-                    </a>
-                </header>
-                <div class="content">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th width="5"><abbr title="Position">#</abbr></th>
-                                <th width="5">ID</th>
-                                <th>Word</th>
-                                <th>Translation</th>
-                                <th width="140">Action</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="(item, i) in words">
-                                <th>{{limit*page+i+1}}</th>
-                                <th>{{item.id}}</th>
-                                <th><input type="text" class="input" :tabindex="i+2" v-model="item.word"></th>
-                                <th><input type="text" class="input" :tabindex="i+3" v-model="item.translation"></th>
-                                <th>
-                                    <button class="button is-success" @click="save(item)" :class="{'is-loading': item.isLoading}">
-                                        Save
-                                    </button>
-                                    <button class="button is-danger" @click="remove(item)" :class="{'is-loading': item.isLoading}">
-                                        <i class="fa fa-trash" aria-hidden="true"></i>
-                                    </button>
-                                </th>
-                            </tr>
-                        </tbody>
-                    </table>
+<body >
+    <div id="app">
+        <section class="hero">
+            <div class="hero-body" style="padding-bottom: 0">
+                <div class="container">
+                <h1 class="title">
+                    Admin Panel
+                </h1>
+                <h2 class="subtitle">
+                    English to Georgian Dictionary for Kindle e-Readers
+                </h2>
                 </div>
-                <footer class="card-footer">
-                    <a href="#" class="card-footer-item">
-                        <span>Total Words count: {{ count }}</span>
-                    </a>
-                </footer>
             </div>
-            <br>
-            <div class="field has-addons">
-                <p class="control">
-                    <button :disabled="page<1" class="button" @click="goTo(page)">
-                        <span>
-                            <i class="fa fa-chevron-left" aria-hidden="true"></i>
+        </section>
+        <section class="hero">
+            <div class="hero-body" style="padding-bottom: 0">
+                <div class="container">
+                    <div class="columns">
+                        <div class="column">
+                            <p class="notification is-info">Total Words: <strong>{{ total }}</strong></p>
+                        </div>
+                        <div class="column">
+                            <p class="notification is-success">Translated: <strong>{{ translated }}</strong></p>
+                        </div>
+                        <div class="column">
+                            <p class="notification is-warning">Untranslated: <strong>{{ untranslated }}</strong></p>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <div class="card">
+                    <header class="card-header">
+                        <p class="card-header-title">
+                            Show: &nbsp;
+                            <select v-model="limit" @change="init()">
+                                <option value="10">10</option>
+                                <option value="25">25</option>
+                                <option value="50">50</option>
+                                <option value="100">100</option>
+                            </select>
+                            &nbsp; Sort By: &nbsp;
+                            <select v-model="sort" @change="init()">
+                                <option value="id">ID</option>
+                                <option value="word">Word</option>
+                                <option value="translation">Translation</option>
+                            </select>
+                            &nbsp; Order By: &nbsp;
+                            <select v-model="order" @change="init()">
+                                <option value="asc">Asc</option>
+                                <option value="desc">Descending</option>
+                            </select>
+                            &nbsp; Filter: &nbsp;
+                            <select v-model="filter" @change="init()">
+                                <option value="0">All</option>
+                                <option value="1">Translated</option>
+                                <option value="2">Whithout Translation</option>
+                            </select>
+                        </p>
+                        <a href="#" class="card-header-icon" aria-label="more options" @click="add()">
+                            <span class="icon">
+                                <i class="fa fa-plus" aria-hidden="true"></i>
+                            </span>
+                        </a>
+                    </header>
+                    <div class="content">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th width="5"><abbr title="Position">#</abbr></th>
+                                    <th width="5">ID</th>
+                                    <th>Word</th>
+                                    <th>Translation</th>
+                                    <th width="140">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="(item, i) in words">
+                                    <th>{{limit*page+i+1}}</th>
+                                    <th>{{item.id}}</th>
+                                    <th><input type="text" class="input" :tabindex="i+2" v-model="item.word"></th>
+                                    <th><input type="text" class="input" :tabindex="i+3" v-model="item.translation"></th>
+                                    <th>
+                                        <button class="button is-success" @click="save(item)" :class="{'is-loading': item.isLoading}">
+                                            Save
+                                        </button>
+                                        <button class="button is-danger" @click="remove(item)" :class="{'is-loading': item.isLoading}">
+                                            <i class="fa fa-trash" aria-hidden="true"></i>
+                                        </button>
+                                    </th>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <footer class="card-footer">
+                        <a href="#" class="card-footer-item">
+                            <span>Total Words count: {{ count }}</span>
+                        </a>
+                    </footer>
+                </div>
+                <br>
+                <div class="field has-addons">
+                    <!-- <p class="control">
+                        <button :disabled="page<1" class="button" @click="goTo(page)">
+                            <span>
+                                <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                            </span>
+                        </button>
+                    </p>
+                    <p class="control" v-for="n in pages">
+                        <a class="button" @click="goTo(n)" :class="{'is-primary': n === page+1}">
+                            <span>{{n}}</span>
+                        </a>
+                    </p>
+                    <p class="control">
+                        <button :disabled="(page+1)===pages" class="button" @click="goTo(page+2)">
+                            <span>
+                                <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                            </span>
+                        </button>
+                    </p> -->
+                    <paginate
+                        :page-count="pages"
+                        :click-handler="goTo"
+                        :prev-text="'Prev'"
+                        :next-text="'Next'"
+                        :page-class="'control'"
+                        :no-li-surround="false"
+                        :first-last-button="true"
+                        :page-range="5"
+                        :page-link-class="'button'"
+                        :active-class="'is-active'"
+                        :container-class="'pagination'">
+    
+                        <span slot="prevContent">
+                            <p class="control">
+                                <button class="button">
+                                    <span>
+                                        <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                                    </span>
+                                </button>
+                            </p>
                         </span>
-                    </button>
-                </p>
-                <p class="control" v-for="n in pages">
-                    <a class="button" @click="goTo(n)" :class="{'is-primary': n === page+1}">
-                        <span>{{n}}</span>
-                    </a>
-                </p>
-                <p class="control">
-                    <button :disabled="(page+1)===pages" class="button" @click="goTo(page+2)">
-                        <span>
-                            <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <span slot="nextContent">
+                            <p class="control">
+                                <button class="button">
+                                    <span>
+                                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                                    </span>
+                                </button>
+                            </p>
                         </span>
-                    </button>
-                </p>
+                    </paginate>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
     
     <script src="https://vuejs.org/js/vue.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.17.1/axios.min.js"></script>
+    <script src="https://unpkg.com/vuejs-paginate@latest"></script>
     <script src="./app.js"></script>
 </body>
 </html>
