--- a/admin/index.html
+++ b/admin/index.html
@@ -20,7 +20,7 @@
         <section class="hero">
             <div class="hero-body" style="padding-bottom: 0">
                 <div class="container">
-                <h1 class="title">
+                <h1 class="title" @click="reset()">
                     Admin Panel
                 </h1>
                 <h2 class="subtitle">
@@ -54,6 +54,14 @@
                                 <div class="control  is-expanded">
                                     <input class="input" v-model="searchTerm" type="text" placeholder="Find Word">
                                 </div>
+                                <p class="control">
+                                    <span class="select">
+                                        <select v-model="searchField"> 
+                                            <option value="word">Word</option>
+                                            <option value="translation">Translation</option>
+                                        </select>
+                                    </span>
+                                </p>
                                 <p class="control">
                                     <span class="select">
                                         <select v-model="searchMode"> 
@@ -108,7 +116,7 @@
                                 <select v-model="filter" @change="init()">
                                     <option value="0">All</option>
                                     <option value="1">Translated</option>
-                                    <option value="2">Whithout Translation</option>
+                                    <option value="2">Without Translation</option>
                                 </select>
                             </span>
                         </p>
@@ -155,25 +163,6 @@
                 </div>
                 <br>
                 <div class="field has-addons">
-                    <!-- <p class="control">
-                        <button :disabled="page<1" class="button" @click="goTo(page)">
-                            <span>
-                                <i class="fa fa-chevron-left" aria-hidden="true"></i>
-                            </span>
-                        </button>
-                    </p>
-                    <p class="control" v-for="n in pages">
-                        <a class="button" @click="goTo(n)" :class="{'is-primary': n === page+1}">
-                            <span>{{n}}</span>
-                        </a>
-                    </p>
-                    <p class="control">
-                        <button :disabled="(page+1)===pages" class="button" @click="goTo(page+2)">
-                            <span>
-                                <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                            </span>
-                        </button>
-                    </p> -->
                     <paginate
                         :page-count="pages"
                         :click-handler="goTo"
@@ -183,6 +172,7 @@
                         :no-li-surround="false"
                         :first-last-button="true"
                         :page-range="5"
+                        :force-page="page"
                         :page-link-class="'button'"
                         :active-class="'is-active'"
                         :container-class="'pagination'">
