--- a/admin/index.html
+++ b/admin/index.html
@@ -120,7 +120,7 @@
                                 </select>
                             </span>
                         </p>
-                        <a href="#" class="card-header-icon" aria-label="more options" @click="add()">
+                        <a class="card-header-icon" aria-label="more options" @click="add(e)">
                             <span class="icon">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                             </span>
@@ -139,7 +139,7 @@
                             </thead>
                             <tbody>
                                 <tr v-for="(item, i) in words">
-                                    <th>{{limit*page+i+1}}</th>
+                                    <th>{{limit*(page-1)+i+1}}</th>
                                     <th>{{item.id}}</th>
                                     <th><input type="text" class="input" :tabindex="i+2" v-model="item.word"></th>
                                     <th><input type="text" class="input" :tabindex="i+3" v-model="item.translation"></th>
@@ -168,6 +168,10 @@
                         :click-handler="goTo"
                         :prev-text="'Prev'"
                         :next-text="'Next'"
+                        :prev-class="'control'"
+                        :next-class="'control'"
+                        :prev-link-class="'button'"
+                        :next-link-class="'button'"
                         :page-class="'control'"
                         :no-li-surround="false"
                         :first-last-button="true"
